--- a/table.html
+++ b/table.html
@@ -1,3 +1,19 @@
+<!doctype html>
+<html>
+<head>
+<title> dogs </title>
+</head>
+<body>
+<br>
+<ul> 
+    <li>  british collie </li>
+    <li>  corgi </li>
+    <li>  golden retriever </li>
+</ul>
+<br>               
+<! --identify additional line breaks, dont need close tag -->
+<br>
+<br>   
 <table>
 <tr>
     <th> The small dog </th>
@@ -12,3 +28,10 @@
 </tr>
 
 </table>
+<h1> the dog </h1>
+<p> this is about dogs </p>
+<h2> dogs and dogs </h2>
+<p> this is another dog </p>
+<h3> this is stupid &nbsp&nbsp&nbsp very stupid 
+</body>
+</html>
