--- a/index.html
+++ b/index.html
@@ -1,37 +1,11 @@
-<!doctype html>
-<html>
-<head>
-<title> pets </title>
-</head>
+ <!doctype html>
+<html> 
+<head> </head>
 <body>
-<br>
-<ul> 
-    <li>  british collie </li>
-    <li>  corgi </li>
-    <li>  golden retriever </li>
-</ul>
-<br>               
-<! --identify additional line breaks, dont need close tag -->
-<br>
-<br>   
-<table>
-<tr>
-    <th> The small dog </th>
-    <th> The big dog </th>
-    <th> The medium dog </th>
-</tr>
-
-<tr>
-    <td> dogs </td>
-    <td> another dog </td>
-    <td> new dog </td>
-</tr>
-
-</table>
-<h1> the dog </h1>
-<p> this is about dogs </p>
-<h2> dogs and dogs </h2>
-<p> this is another dog </p>
-<h3> this is stupid &nbsp&nbsp&nbsp very stupid 
+<p> click here for free vbucks
+<a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" a>
+free vbucks  </a> 
+<p/>
 </body>
-</html>
+
+</html> 
