--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html> 
 <head> </head>
 <body>
+<title> freestuff.com </title>
+ <h1> we are just keep it real </h1>
 <p> click here for free vbucks
 <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" a>
 free vbucks  </a> 
