--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <body>
 <title> freestuff.com </title>
  <h1> we are just keep it real </h1>
-<p> click here for free vbucks
+<p> click here for 
 <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" a>
 free vbucks  </a> 
 <p/>
 <br>
 <br>
-<p> click here for free apex coins 
+<p> click here for  
 <a href="https://www.youtube.com/watch?v=yF-NC3eRsqc" a>
 free apex coins </a> 
 <p/>
