--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html> 
 <head> </head>
 <body>
-<title> freestuff.com </title>
- <h1> we are just keep it real </h1>
+ <h1> this website is not a scam </h1>
 <p> click here for 
 <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" a>
 free vbucks  </a> 
