--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" a>
 free vbucks  </a> 
 <p/>
+<p> <img src="image.png"> </p>
 <br>
 <br>
 <p> click here for  
@@ -21,8 +22,7 @@ hot milfs in your area </a>
 <p/>
 <br>
 <br>
-<h1> image description </h1>
-<p> <img src="image.jpg"> </p>
+
 </body>
 
 </html>
