--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" a>
 free vbucks  </a> 
 <p/>
-<p> <img src="image.png"> </p>
+<p> <img src="Image.png"> </p>
 <br>
 <br>
 <p> click here for  
