--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" a>
 free vbucks  </a> 
 <p/>
-<img src="image/Image.png" />
+<img src="Image/a64.png" />
 <br>
 <br>
 <p> click here for  
