--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" a>
             free vbucks </a>
     </p>
-    <img src="Image/a64.png" />
+    <img src="a64.png" />
     <br>
     <br>
     <p> click here for
