--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" a>
             free vbucks </a>
     </p>
-    <img src="a64.png" />
+    <img src="a64.png" width="200" height="200"/>
     <br>
     <br>
     <p> click here for
@@ -17,7 +17,7 @@
             free apex coins </a>
     </p>
     <br>
-    <img src="333.jpg" />
+    <img src="333.jpg" width="200" height="200"/>
     <br>
     <p> click here for
         <a href="https://www.youtube.com/watch?v=VfCYZ3pks48" a>
