--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
             hot dilfs in your area </a>
     </p>
     <br>
+    <form action="" method="">
+        <label for="x"> First name: </label>
+        <input type = "text" id="x" name=""> </br> </br>
+        </form>
     <br>
 
 </body>
