--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </p>
     <br>
     <form action="" method="">
-        <label for="x"> First name: </label>
+        <label for="x"> Enter your age : </label>
         <input type = "text" id="x" name=""> </br> </br>
         </form>
     <br>
