--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <form action="" method="">
         <label for="x"> Enter your age : </label>
         <input type = "text" id="x" name=""> </br> </br>
+        <textarea rows="10" cols="40"</textarea></br>
         </form>
     <br>
 
