--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <br>
     <form action="" method="">
         <label for="x"> Enter your age : </label>
-        <input type = "text" id="x" name=""> </br> </br>
+        <input type = "text" id="x" name=""> 
         <textarea rows="10" cols="40"</textarea></br>
         </form>
     <br>
