--- a/index.html
+++ b/index.html
@@ -29,9 +29,10 @@
     <form action="" method="">
         <label for="x"> Enter your age : </label>
         <input type = "text" id="x" name=""> 
-        <textarea rows="10" cols="40"</textarea></br>
         </form>
     <br>
+    form action="" method="">
+    <textarea rows="10" cols="40"</textarea></br>
 
 </body>
 
