--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <input type = "text" id="x" name=""> 
         </form>
     <br>
-    form action="" method="">
+    <form action="" method="">
     <textarea rows="10" cols="40"</textarea></br>
 
 </body>
