--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
         </form>
     <br>
     <form action="" method="">
-    <textarea rows="10" cols="40"</textarea></br>
-
+    <textarea rows="10" cols="40"</textarea>
 </body>
 
 </html>
