--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         </form>
     <br>
     <form action="" method="">
-    <textarea rows="10" cols="40"</textarea>
-
-
-    </body>
-    </html>
+    <textarea rows="10" cols="40"</textarea></textarea></br>
+    <input type="submit" value=""submit">
+</form>
+</body>
+</html>
