--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <br>
     <form action="" method="">
     <textarea rows="10" cols="40"</textarea></textarea></br>
-    <input type="submit" value=""submit">
+    <input type="submit" value="submit">
 </form>
 </body>
 </html>
