--- a/Survery.html
+++ b/Survery.html
@@ -3,20 +3,19 @@ Survery
 <html>            
 <head>            
     <form action="" method="">
-        insert random question or text <br>
-        <input type="checkbox" name""> option1 <br>
-        <input type="checkbox" name""> option2 <br>
-        <input type="checkbox" name""> option3 <br>
-        <input type="checkbox" name""> option4 <br>
-        
+        What is your height <br>
+        <input type="checkbox" name""> below 5"0 <br>
+        <input type="checkbox" name""> 5"1-5"4 <br>
+        <input type="checkbox" name""> 5"5-5"8 <br>
+        <input type="checkbox" name""> 5"9-6"0 <br>
+        <input type="checkbox" name""> 6"1 and above <br>
+
+
+        below 5"0:
+            <input type="radio" name="yesorno" value=""> </br>
+        5"1-5"4
+            <input type="radio" name="yesorno" value="">
         </form>
 
-
-
-
-
-
-
-    
 </body>
 </html>  
