--- a/Survery.html
+++ b/Survery.html
@@ -4,18 +4,23 @@ Survery
 <head>            
     <form action="" method="">
         What is your height <br>
-        <input type="checkbox" name""> below 5"0 <br>
-        <input type="checkbox" name""> 5"1-5"4 <br>
-        <input type="checkbox" name""> 5"5-5"8 <br>
-        <input type="checkbox" name""> 5"9-6"0 <br>
-        <input type="checkbox" name""> 6"1 and above <br>
-
-
-        below 5"0:
+    
+        -below 5"0:
             <input type="radio" name="yesorno" value=""> </br>
-        5"1-5"4
-            <input type="radio" name="yesorno" value="">
+        -5"1-5"4:
+            <input type="radio" name="yesorno" value=""> </br>
+        -5"1-5"4:
+            <input type="radio" name="yesorno" value=""> </br>
+        5"5-5"8
+            <input type="radio" name="yesorno" value=""> </br>
+        5"9-6"0
+            <input type="radio" name="yesorno" value=""> </br>
         </form>
+        6"1 and above
+            <input type="radio" name="yesorno" value=""> </br>
+
+        <label for="x"> submit </label>
+        <input type = "text" id="x" name=""> </br> </br>
 
 </body>
 </html>  
