--- a/Survery.html
+++ b/Survery.html
@@ -17,10 +17,8 @@ Survery
             <input type="radio" name="yesorno" value=""> </br>
         </form>
         6"1 and above
-            <input type="radio" name="yesorno" value=""> </br>
-
-        <label for="x"> submit </label>
-        <input type = "text" id="x" name=""> </br> </br>
+            <input type="radio" name="yesorno" value=""> </br> 
+        </form>
 
 </body>
 </html>  
