--- a/Survery.html
+++ b/Survery.html
@@ -3,7 +3,7 @@ Survery
 <html>            
 <head>            
     <form action="" method="">
-        What is your height <br>
+        What is your height ? <br>
     
         -below 5"0:
             <input type="radio" name="yesorno" value=""> </br>
@@ -15,7 +15,6 @@ Survery
             <input type="radio" name="yesorno" value=""> </br>
         5"9-6"0
             <input type="radio" name="yesorno" value=""> </br>
-        </form>
         6"1 and above
             <input type="radio" name="yesorno" value=""> </br> 
         </form>
