--- a/testingiframes.html
+++ b/testingiframes.html
@@ -3,7 +3,7 @@
 <head></head>
 <body>
 <iframe frameborder="0" width="300" height="300"
-  src="omg.html" name="what " id="ouriframe">
+  src="omg.html" name="ouriframe " id="ouriframe">
 what 
 <iframe><br/>
 
