--- a/hiddennote.html
+++ b/hiddennote.html
@@ -5,10 +5,8 @@
 <head>
 </head>
 <body>
-    <img src="333.jpg" title="hidden note" alt=" bruh">
+    <img src="balenciaga.webp" title="this product is over priced" alt="oops pic didnt load ">
     
-
-
 </body>
 </html>
 
